--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        p{
+            color: greenyellow;
+        }
+    </style>
 </head>
 <body>
     
     <h1>hellow world</h1>
     <div class="div"></div>
+    <p>p tegida second shoxida text yozildi</p>
 </body>
 </html>
